# Sahayak-Bot

./: Readme.md  prajwal_controller.py
Dhruval/Task_1.2/: controller.py
Trash/frames/: after_rsp.gv  before_rsp.gv  post_transform_error.dot  transform_error.dot
Trash/graph/: ebot.gv  ebot_ur5.urdf
Trash/pointcloud/: ransac_inlier.pcd
ebot_description/launch/: task4.launch
ebot_mani/: .setup_assistant  CMakeLists.txt  package.xml
ebot_mani/config/: ebot.srdf  fake_controllers.yaml  joint_state_controller.yaml  ros_controllers.yaml  sensors_kinect_pointcloud.yaml  trajectory_control.yaml
ebot_mani/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  ebot_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  my_launch.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ebot_mani/scenes/: task4.scene
ebot_mani/scripts/: camera.py  convertor.py  explore_pointcloud2.py  filters.py  flags.py  lab.py  main.py  pointcloud.py  settings.py  utils.py
lab/: CMakeLists.txt
lab/include/: recognition.hpp
lab/point_cloud/: after_cluster3.pcd  after_cropbox.pcd  after_ransac.pcd
lab/src/: main.cpp  recognition.cpp
object_recognition/: CMakeLists.txt  Readme.md  package.xml
object_recognition/point_cloud/: after_cluster0.pcd  after_cluster1.pcd  after_cluster2.pcd  after_cluster3.pcd  after_cluster4.pcd  after_cropbox.pcd  after_ransac.pcd  after_voxel.pcd  battery1.pcd  can1.pcd  centered_battery.pcd  centered_can.pcd  centered_glue.pcd  centered_milk.pcd  glue1.pcd
object_recognition/scripts/: config.py  example4.py  main.py  manipulator.py  pose_settings.py  print_eef_pose.py  trash.md
pkg_task0/: CMakeLists.txt  package.xml
(+35 files in other folders)
